# r2s2_movement

./: README.md
r2s2_movement/: CMakeLists.txt  package.xml
r2s2_movement/launch/: motion_planning.launch
r2s2_movement/msg/: bounding_box_msg.msg
r2s2_movement/scripts/: glider_code.py  move_to_pos.py  mvttt.py  planning_test.py
r2s2_movement/test scripts/: CMakeLists.txt  package.xml
